# ft_ping

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  cp_files.sh  ft_clib.c  ft_clib.h  ft_ping.c  ft_ping.h  main.c  ping_loop.c  setup.c  setup_docker.sh  utils.c
incl/: ft_ping.h
srcs/: CMakeLists.txt  ft_ping.c  ping_loop.c  setup.c  utils.c
